--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -144,7 +144,7 @@ SOFTWARE.*/
 
 #footer p {
 	margin: auto;
-	width: 100vw;
+	width: 100%;
 	color: #020;
 	text-align: center;
 }
